--- a/ex8/css/styte.css
+++ b/ex8/css/styte.css
@@ -552,19 +552,47 @@ color: green;
 /* footer */
 /* footer 1 */
 #footer_1{
-
+    display: flex;
+    justify-content: space-between;
+    background: rgb(37, 34, 34);
+    color: #988f8f;
 }
 #footer_1 .content{
-
+    width: 380px;
+    padding: 50px;
 }
 #footer_1 .box{
-
+    width: fit-content;
+    padding: 1px 73px;
+    background: #29793e;
+    font-size: 21px;
+    color: white;
+    border-radius: 10px;
+    margin-bottom: 55px;
+    margin-left: 66px;
+}
+#footer_1 .information_Link{
+    width: 350px;
+    margin-top: 55px;
+    text-align: center;
+}
+#footer_1 .information_Link H3{
+color: white;
+}
+#footer_1 .information_Link ul {
+text-align: center;
+text-align: center;
+    padding: 0px;
 }
 #footer_1 .information_Link ul li{
-
+    padding: 10px;
+    font-size: 20px;
+    border-bottom: 1px dotted;
 }
-#footer_1 .information_Link ul li h3{
-
+#footer_1 .information_Link ul li a{
+    color: #988f8f;
 }
+
+
 
 /* end foter */
