--- a/TeamWork_final/css/shop.css
+++ b/TeamWork_final/css/shop.css
@@ -118,14 +118,10 @@
     height: 54px;
     box-shadow: 0 0 0 1px #eaeaec inset;
     padding-right: 30px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     position: relative;
     overflow:hidden;
     transition: all ease-out .3s;
-}
-
-.minHeight{
-    min-height: 54px;
 }
 
 .block-tag__link{
@@ -146,11 +142,229 @@
 
 }
 
-i{
+.drowpdown{
     font-size: 14px;
     position: absolute;
     top: 11px;
     right: 20px;
-    color: #666;
+    color: var(--word-color);
     padding: 10px;
+}
+
+.shop-wrapper__toolbar{
+    display: flex;
+    height: 56px;
+    border: 1px solid var(--border-color);
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 25px;
+    margin: 10px 0 20px 0;
+}
+
+.toolbar-result{
+    color: var(--word-color); 
+    font-size: 14px;
+}
+
+.toolbar-selection select{
+    padding: 2px;
+    font-size: 14px;
+    color: #333;
+    border: 1px solid #ccc;
+
+}
+
+/* .toolbar-selection select:focus-visible{
+    border: 1px solid #ccc;
+} */
+
+
+
+.shop-wrapper__products{
+    
+}
+
+.item-product{
+    margin-bottom: 50px;
+}
+
+.item-product__thumb{
+    position: relative;
+}
+
+
+.item-product__thumb:hover::before{
+    visibility: visible;
+    opacity: 1;
+}
+
+.item-product__thumb:hover .item-product__thumb--above{
+    transform: rotateY(180deg);
+    opacity: 0;
+    visibility: hidden;
+}
+
+.item-product__thumb::before{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    background: #0000004d;
+    opacity: 0;
+    visibility: hidden;
+    transition: all ease-out .5s;
+    z-index: 1;
+}
+
+.item-product__thumb:hover .item-product__thumb--behind{
+    transform: rotateY(0deg);
+    opacity: 1;
+    visibility: visible;
+}
+
+.item-product__thumb--above{
+    width: 100%;
+    transition: all 0.5s ease-out 0s;
+    visibility: visible;
+    opacity: 1;
+}
+
+.item-product__thumb--behind{
+    position: absolute;
+    left: 0;
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    transition: all 0.5s ease-out 0s;
+}
+
+.item-product__thumb-cart{
+    position: absolute;
+    border: 1px solid var(--primary-color);
+    width: 180px;
+    height: 120px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.5s ease-out 0s;
+    z-index: 1;
+}
+
+.item-product__thumb:hover .item-product__thumb-cart{
+    opacity: 1;
+    visibility:visible;
+}
+
+.item-product__thumb:hover .cart-btn{
+    bottom: 0px;
+}
+
+.item-product__thumb:hover .cart-list{
+    top: 20px;
+}
+
+.thumb-cart{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+
+.cart-list{
+    position: absolute;
+    left: 23px;
+    display: flex;
+    top: -30px;
+    transition: all 0.5s ease-out 0s;
+}
+
+.cart-item{
+    width: 40px;
+    height: 40px;
+    margin-right: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.cart-item:hover{
+    background: var(--primary-color);
+    transition: all 0.5s ease-out 0s;
+}
+
+.cart-item__link{
+
+}
+
+.cart-item__link i{
+    font-size: 16px;
+    color: #fff;
+}
+
+.cart-btn{
+    font-size: 14px;
+    background: var(--primary-color);
+    color: #FFF;
+    padding: 12px 20px;
+    position: absolute;
+    bottom: 0px;
+    left: 23px;
+    bottom: -40px;
+    display: block;
+    transition: all 0.5s ease-out 0s;
+}
+
+.cart-btn:hover{
+    background: #ffa200;
+}
+
+.item-product__infor{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.item-product__infor-title{
+    margin: 20px 0 10px 0;
+}
+
+.item-product__infor-title a{
+    color: #333;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.item-product__infor-price{
+    margin: 5px 0 14px;
+    display: flex;
+}
+
+.item-product__infor-old-price{
+    font-size: 14px;
+    margin-right: 15px;
+    color: #999;
+    text-decoration: line-through;
+}
+
+.item-product__infor-current-price{
+    font-size: 18px;
+    color: #333;
+    font-weight: 600;
+}
+
+.item-product__infor-rating i{
+    font-size: 1.2rem;
+}
+
+.item-product__infor-rating .solid-star{
+    color: #ffcc30;
+}
+.item-product__infor-rating .hollow-star{
+    color:#ffcc30;
 }
