--- a/TeamWork_final/css/styte.css
+++ b/TeamWork_final/css/styte.css
@@ -50,3 +50,201 @@ a {
     padding-top: 100px;
     padding-top: 73px;  
 }
+.icon-search:hover{
+    cursor: pointer;
+    color: #ffc229;
+}
+
+.nav-links{
+    color: white;
+    margin: 5px 20px;
+}
+
+.nav-links:hover{
+    color: #ffc229;
+    text-decoration: none;
+}
+
+.nav-item:hover{
+    color: #ffc229;
+}
+
+.icons:hover{
+    color: #ffc229;
+    cursor: pointer;
+}
+
+.dropdowns {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-menus{
+    display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-menus a{
+    color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
+.dropdown-menus a:hover{color: #ffc229;}
+.dropdowns:hover .dropdown-menus {display: block;}
+
+.sliders{
+    width: 50%;
+    margin: 10px auto;
+}
+
+.status-product-sale {
+    background: #ff6766 none repeat scroll 0 0;
+    color: #fff;
+    padding: 0 10px 1px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 10;
+}
+
+.product-title{
+    color: black;
+}
+
+.product-title:hover{
+    text-decoration: none;
+    color: #ffc229;
+}
+
+.checked{
+    color: #ffc229;
+}
+
+.card-img{
+    width: 100%;
+    text-align: center;
+}
+
+.card{
+    height: 420px;
+    border: none;
+}
+
+.flip-box {
+    cursor: pointer;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    perspective: 1000px;
+}
+  
+.flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+  
+.flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+}
+  
+.flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;  
+}
+
+.flip-box:hover .div-add-to-cart{
+    display: inline-block;
+}
+  
+.flip-box-back {
+    transform: rotateY(180deg);
+}
+
+.img-back{
+    filter: brightness(50%);
+}
+
+.div-add-to-cart{
+    height: 140px;
+    width: 190px;
+    position: absolute;
+    top: 88px;
+    left: 33px;
+    border: 1px solid #ffc229;
+    text-align: center;
+    display: none;
+}
+
+.div-btn-add-to-cart{
+    margin-top: -2px;
+    
+}
+
+.btn-add-to-cart{
+    background-color: #ffc229;
+    color: white;
+    border: 0.5px solid #ffc229;
+    cursor: pointer;
+    height: 40px;
+
+    animation: slide-up 1.0s ease;
+
+}
+
+.btn-add-to-cart:hover{
+    background-color: #ff9900;
+    color: white;
+    border: 0.5px solid #ff9900;
+}
+
+.div-icons-add-to-cart{
+    display: inline-block;
+    margin: 30px auto;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 40px;
+
+    animation: slide-down 1.0s ease;
+}
+
+.div-icons-add-to-cart:hover{
+    background-color: #ffc229;
+}
+
+.icons-cart{
+    color: white;
+}
+
+
+@keyframes slide-up {
+    0% { 
+        transform: translateY(40px);
+     }
+    100% { 
+        transform: translateY(0); 
+    }
+}
+
+@keyframes slide-down {
+    0% { 
+        transform: translateY(-40px);
+     }
+    100% { 
+        transform: translateY(0); 
+    }
+}
