--- a/TeamWork_final/css/cart.css
+++ b/TeamWork_final/css/cart.css
@@ -1,3 +1,11 @@
+a {
+    text-decoration: none;
+    
+}
+a:hover {
+    text-decoration: none;
+  
+}
 .bloc_left_price {
     color: #c01508;
     text-align: center;
