--- a/TeamWork_final/css/shop.css
+++ b/TeamWork_final/css/shop.css
@@ -5,7 +5,32 @@
     list-style: none;
     text-decoration: none;
 }
+#wrapper {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
 
+ul {
+    list-style: none;
+}
+
+h2 {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+h3 {
+    font-size: 21px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+a:hover {
+    text-decoration: none;
+    color: #ffc229;
+}
 #shop-wrapper{
     padding-top: 50px;
 }
@@ -69,9 +94,7 @@
     border: 1px solid var(--border-color);
 }
 
-.shop-wrapper__featued-heading{
-    
-}
+
 
 .featured-product{
     padding: 5px 15px 15px;
@@ -138,9 +161,7 @@
     border: 1px solid var(--primary-color);
 }
 
-.block-tag__link{
 
-}
 
 .drowpdown{
     font-size: 14px;
@@ -180,9 +201,6 @@
 
 
 
-.shop-wrapper__products{
-    
-}
 
 .item-product{
     margin-bottom: 50px;
@@ -300,9 +318,7 @@
     transition: all 0.5s ease-out 0s;
 }
 
-.cart-item__link{
 
-}
 
 .cart-item__link i{
     font-size: 16px;
@@ -370,3 +386,26 @@
 .item-product__infor-rating .hollow-star{
     color:#ffcc30;
 }
+:root{
+    --border-color:#eaeaec;
+    --heading-color:#333;
+    --word-color:#666;
+    --primary-color:#FFC229;
+}
+
+html{
+    font-family: 'Lato', sans-serif;
+    font-size: 62.5%;
+    line-height: 1.6rem;
+}
+
+.sidebar-heading{
+    font-size: 1.8rem;
+    font-weight: 700;
+    padding: 10px 15px;
+    color: var(--heading-color);
+    border-bottom: 1px solid var(--border-color);
+}
+/* position: relative;
+    width: 100%;
+    height: 100%; */
