--- a/TeamWork_final/css/styte.css
+++ b/TeamWork_final/css/styte.css
@@ -327,7 +327,9 @@ a:hover {
 /* .email-info-2 button:hover{
     background-color: #ffc229;
 } */
-
+.lentop {display:none; bottom: 40%; right: 10px; cursor: pointer;  position: fixed; z-index: 1000;}
+.lentop div {background:crimson; border:2px solid #fff; border-radius:45px; padding:11px 12.5px; box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.3)}
+.lentop i {width:16px; height:16px; color: black;}
 @keyframes slide-up {
     0% { 
         transform: translateY(40px);
